--- a/Tattoor/Views/Shared/_Layout.cshtml
+++ b/Tattoor/Views/Shared/_Layout.cshtml
@@ -37,9 +37,9 @@
                     <div id="navigation" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="active"><a href="#home">Home</a></li>
-                            <li><a href="#requestInfo">Request Info</a></li>
-                            <li><a href="#portfolio">Portfolio</a></li>
-                            <li><a href="#locations">Locations</a></li>
+                            <li><a href="#apptRequest">Appointment Request</a></li>
+                            <li><a href="#instagram">Latest From Instagram</a></li>
+                            <li><a href="#location">Location</a></li>
                         </ul>
                     </div>
                 </div>
@@ -47,13 +47,22 @@
         </div>
     </header>
     <!-- /.navbar-->
+
+    @RenderBody()
+
     <div class="container-fluid body-content">
-        @RenderBody()
-        <hr />
         <footer>
             <p class="text-uppercase">&copy; @DateTime.Now.Year - Tattoor</p>
         </footer>
     </div>
+    @*<div class="container-fluid body-content">
+            <hr />
+            @RenderBody()
+            <hr />
+            <footer>
+                <p class="text-uppercase">&copy; @DateTime.Now.Year - Tattoor</p>
+            </footer>
+        </div>*@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
