Adding a landing page and renamed controllers. Also moving shared code into layouts and partials.

--- a/Tattoor/Views/Artist/Index.cshtml
+++ b/Tattoor/Views/Artist/Index.cshtml
@@ -1,23 +1,5 @@
-﻿
-@{
-    ViewBag.Title = "Artist Appointment Request";
-}
+﻿@Html.Partial("_Navbar");
 
-<!-- intro -->
-<section id="home" class="intro image-background">
-    <div class="overlay"></div>
-    <div class="content">
-        <div class="container-fluid clearfix">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2 col-sm-12">
-                    <h1><span class="bold">@ViewBag.FirstName</span><br /><span class="bold">@ViewBag.LastName</span></h1>
-                    <p class="roboto">@ViewBag.Header</p>
-                </div>
-            </div>
-        </div>
-    </div><a href="#apptRequest" class="icon faa-float animated scroll-to"><i class="fa fa-angle-double-down"></i></a>
-</section>
-<!-- intro -->
 <!-- contact -->
 <section id="apptRequest">
     <div class="container clearfix">
@@ -82,7 +64,7 @@
 </section>
 <!-- contact -->
 <!-- portfolio -->
-<section id="instagram" class="no-padding-bottom">
+<section id="photos" class="no-padding-bottom">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
