--- a/Tattoor/Views/Shared/_Layout.cshtml
+++ b/Tattoor/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tattoor: @ViewBag.Title</title>
+    <title>Tattoor</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -15,7 +15,7 @@
     <!-- Google fonts - Roboto Condensed for headings, Open Sans for copy-->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700%7COpen+Sans:300,400,700">
     <!-- theme stylesheet-->
-    <link rel="stylesheet" href="~/Content/style.red.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="~/Content/style.default.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="~/Content/custom.css">
     <!-- Favicon-->
@@ -26,47 +26,22 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 </head>
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
-    <!-- navbar-->
-    <header class="header">
-        <div class="sticky-wrapper">
-            <div role="navigation" class="navbar navbar-default">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#intro" class="navbar-brand scroll-to"><img src="~/Images/logo.png" alt=""></a>
-                    </div>
-                    <div id="navigation" class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="active"><a href="#home">Home</a></li>
-                            <li><a href="#apptRequest">Appointment Request</a></li>
-                            <li><a href="#instagram">Latest From Instagram</a></li>
-                            <li><a href="#location">Location</a></li>
-                        </ul>
-                    </div>
+
+    @RenderBody();
+
+    <footer>
+        <div class="container">
+            <div class="row copyright">
+                <div class="col-md-6">
+                    <p class="roboto">&copy;2017 Dadlife</p>
+                </div>
+                <div class="col-md-6">
+                    <p class="credit roboto"><a href="https://bootstrapious.com/tutorials">Bootstrapious</a></p>
+                    <!-- Please do not remove the backlink to us unless you support the development at https://bootstrapious.com/donate. It is part of the license conditions. Thanks for understanding :) -->
                 </div>
             </div>
         </div>
-    </header>
-    <!-- /.navbar-->
-
-    @RenderBody()
-
-    <div class="container-fluid body-content">
-        <footer>
-            <p class="text-uppercase">&copy; @DateTime.Now.Year - Tattoor</p>
-        </footer>
-    </div>
-    @*<div class="container-fluid body-content">
-            <hr />
-            @RenderBody()
-            <hr />
-            <footer>
-                <p class="text-uppercase">&copy; @DateTime.Now.Year - Tattoor</p>
-            </footer>
-        </div>*@
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    </footer>
 
     <!-- Javascript files-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -74,10 +49,20 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery.sticky.js"></script>
     <script src="~/Scripts/jquery.scrollTo.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlqH8BUZxzCMS9VlrTFocaE4FYlDgo-44&v=3.exp&amp;amp;sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHcfHPsIjF0g_XqN0nkFSFFhzAAnmnNYw&v=3.exp&amp;amp;sensor=false"></script>
     <script src="~/Scripts/gmaps.js"></script>
     <script src="~/Scripts/jquery.cookie.js"></script>
     <script src="~/Scripts/front.js"></script>
-
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
+    <script>
+        (function (b, o, i, l, e, r) {
+            b.GoogleAnalyticsObject = l; b[l] || (b[l] =
+            function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
+            e = o.createElement(i); r = o.getElementsByTagName(i)[0];
+            e.src = '//www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e, r)
+        }(window, document, 'script', 'ga'));
+        ga('create', 'UA-XXXXX-X'); ga('send', 'pageview');
+    </script>
 </body>
 </html>
