--- a/Tattoor/Views/Shared/_Layout.cshtml
+++ b/Tattoor/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <!-- Google fonts - Roboto Condensed for headings, Open Sans for copy-->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700%7COpen+Sans:300,400,700">
     <!-- theme stylesheet-->
-    <link rel="stylesheet" href="~/Content/style.default.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="~/Content/style.red.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="~/Content/custom.css">
     <!-- Favicon-->
