Copy changes for landing page

--- a/Tattoor/Views/Home/Index.cshtml
+++ b/Tattoor/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
         <div class="container clearfix">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 col-sm-12">
-                    @*<p class="roboto">Welcome to Tattoor</p>*@
-                    <h1>Built for<br /><span class="bold">Tattoo Artists</span></h1>
-                    <p class="roboto">Who want to take control of their appointment requests</p>
+                    <p class="roboto">Appointment Requests for</p>
+                    <h1><span class="bold">Tattoo Artists</span></h1>
+                    @*<p class="roboto">Take control of your email inbox</p>*@
                 </div>
             </div>
         </div>
